<?xml version="1.0"?>
<package format="2">
  <name>node_programming</name>
  <version>0.0.1</version>
  <description>Example ROS2 Node Package</description>
  <maintainer email="rodrigo.perez@urjc.es">Rodrigo Pérez-Rodríguez</maintainer>
  <license>Apache 2.0</license>

  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>rclpy_lifecycle</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
