<?xml version="1.0"?>
<package format="2">
  <name>tf_seeker</name>
  <version>0.0.1</version>
  <description>TF example for ROS 2</description>
  <maintainer email="rodrigo.perez@urjc.es">Rodrigo Pérez-Rodríguez</maintainer>
  <license>Apache 2.0</license>

  <!-- Dependencies -->
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Export the build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
